--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IWantDb": "Server=localhost; Database=IWantDb; User Id=sa; Password=Sql@2022; MultipleActiveResultSets=true; Encrypt=YES; TrustServerCertificate=YES"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
