add authorization and authentication as service

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtBearerTokenSettings": {
+    "SecretKey": "7585d1f7ceb90fd0b1ab42d0a6ca39fcf55065c7",
+    "Audience": "Audience",
+    "Issuer": "IWantAppIssuer",
+    "ExpiryTimeInSeconds": 60
+  }
 }
