refact: add implicit usings

--- a/IWantApp.csproj
+++ b/IWantApp.csproj
@@ -7,6 +7,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Using Include="Flunt.Notifications"/>
+    <Using Include="Flunt.Validations"/>
+    <Using Include="Dapper"/>
+    <Using Include="System.Security.Claims"/>
+    <Using Include="System.Text"/>
+    <Using Include="System.IdentityModel.Tokens.Jwt"/>
+    <Using Include="Microsoft.EntityFrameworkCore"/>
+    <Using Include="Microsoft.AspNetCore.Identity"/>
+    <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
+    <Using Include="Microsoft.AspNetCore.Authorization"/>
+    <Using Include="Microsoft.AspNetCore.Http"/>
+    <Using Include="Microsoft.AspNetCore.Mvc"/>
+    <Using Include="Microsoft.Data.SqlClient"/>
+    <Using Include="Microsoft.IdentityModel.Tokens"/>
+    <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+
+    <Using Include="IWantApp.Domain.Products"/>
+    <Using Include="IWantApp.Infra.Data"/>
+    <Using Include="IWantApp.Endpoints.Employees"/>
+    <Using Include="IWantApp.Endpoints.Categories"/>
+    <Using Include="IWantApp.Endpoints.Security"/>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Flunt" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
